# FinPilot

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_firebase_user_scoping.py  638aa5bf54cc_create_budget_and_chat_history_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  ai_interaction_log.py  budget.py  chat_history.py  decision_run.py  goal.py  transaction.py  upload_batch.py  user_setting.py
backend/app/prompts/: insights.py
backend/app/routers/: account.py  budgets.py  chat.py  dashboard.py  decision.py  forecast.py  goals.py  privacy.py  settings.py  transactions.py  upload.py
backend/app/schemas/: budget.py  chat.py  common.py  decision.py  financial.py  forecast.py  goal.py  privacy.py  transaction.py  upload.py  user_setting.py
backend/app/services/: ai_chat_service.py  categorizer.py  csv_parser.py  data_service.py  decision_engine.py  financial_engine.py  firebase_auth.py  forecasting.py  gemini_service.py  privacy_service.py
backend/app/tests/: conftest.py  test_api.py  test_csv_parser.py  test_financial_engine.py
backend/app/utils/: logging.py  seeder.py
backend/scripts/: debug_alembic.py  run-dev.ps1  seed_demo.py  setup-venv311.ps1
docs/: PROJECT_STRUCTURE.md
public/demo/: demo-transactions.csv
scripts/: generate_demo_csv.py  run-dev-stack.ps1
src/: main.tsx
src/app/: App.tsx  api.ts  routes.ts  screens.tsx
(+9 files in other folders)
